# CortiScan

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
src/: main.py  run_fastapi.py  run_streamlit.py
src/api/: router.py  schemas.py
src/interface/: gradio.py
src/model/: inference.py  preprocess.py
